--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <!--Open Graph Related Stuff-->
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Lei Sun (孙磊)">
+    <meta property="og:title" content="Sun Lab(孙磊)">
     <meta property="og:url" content="https://rnalab.cn/">
-    <meta property="og:site_name" content="Lei Sun (孙磊)">
+    <meta property="og:site_name" content="Sun Lab(孙磊)">
     <meta property="og:image" content="static/img/lei.jpg" />
     <meta property="og:image:url" content="https://rnalab.cn/static/img/lei.jpg" />
     <meta property="og:description" content="Visiting research scholar at Tsinghua University.">
@@ -94,7 +94,7 @@
                 <div class="col-md-12 col-sm-12 col-xs-12 col-12">
                     <div id="site-title-container">
                         <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" src="static/img/geometry.gif" style="height: 30px;" />
-                        <a id="site-title" href="">Lei Sun</a>
+                        <a id="site-title" href="">Sun Lab</a>
                     </div>
                     <div id="navbar-ul-container">
                         <ul id="navbar-ul">
@@ -157,7 +157,7 @@
                     <!-- About -->
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <p align="justify">
-                            
+                            <strong>Lei Sun （孙磊），PI</strong> <br />
                             I started my lab at <a target="_blank" href="http://www.lifesci.sdu.edu.cn/">Shandong University (Qingdao)</a> in December of 2022. I am broadly interested in RNA biology, especially RNA structure biology, RNA vaccine 
                             and adaptor design, and anti-RNA virus drug development (such as SARS-CoV-2). My lab will develop and use a <b>combination of computational and experimental methods</b> to interpret the structural and functional relationships 
                             of biological macromolecules, build the interaction network, uncover the regulation mechanism and find the potential therapy for diseases based on <b>high-throughput sequencing, bioinformatics analysis, artificial intelligence (AI) prediction,
