--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                     <div id="navbar-ul-container">
                         <ul id="navbar-ul">
                             <li class="nav-listitem">
+                                <a target="_blank" href="https://faculty.sdu.edu.cn/leisun/zh_CN/index.htm">Shandong University</a>
+                            </li>
+                            <li class="nav-listitem">
                                 <a target="_blank" href="https://www.lifesci.sdu.edu.cn/info/1064/7587.htm">School of Life Science</a>
                             </li>
                             <li class="nav-listitem">
