--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Shanghao Dai (戴尚好)" title="Shanghao Dai (戴尚好)" id="display-picture" src="static/img/shanghao.jpg" />
+                                <img alt="Shanghao Dai (戴尚好)" title="Shanghao Dai (戴尚好)" id="display-picture" src="static/img/shanghao.png" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Shanghao Dai (戴尚好),undergraduate，Interested in artificial intelligence，especially RBP-RNA interaction prediction.
