--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         })();
     </script>
 
-    <meta name="keywords" content="孙磊，Lei, Lei Sun, rnalab.cn, tsinghua, SARS-CoV-2, icSHAPE, RNA structure, Shandong University, prismnet, structural dynamic, RNA sequencing, 孙磊, 清华大学, 生命学院, 生命科学学院，山东大学，齐鲁青年学者">
+    <meta name="keywords" content="孙磊，Lei, Lei Sun, Sun Lab, rnalab.cn, tsinghua, 山东大学，SARS-CoV-2, icSHAPE, RNA structure, Shandong University, prismnet, structural dynamic, RNA sequencing, 孙磊, 清华大学, 生命学院, 生命科学学院，山东大学，齐鲁青年学者">
     <meta itemprop="description" name="description" content="Lei Sun, rnalab.cn, profile, Researcher at Shandong University." />
     <!-- fall back to site title if page has no title -->
     <title>
 
-        Lei Sun (孙磊)
+        Sun Lab
 
     </title>
     <link rel="canonical" href="https://rnalab.cn/">
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12 col-12">
                     <div id="site-title-container">
-                        <img alt="Lei Sun (孙磊)" title="Lei Sun  (孙磊)" src="static/img/geometry.gif" style="height: 30px;" />
+                        <img alt="Sun Lab (孙磊)" title="Sun Lab (孙磊)" src="static/img/geometry.gif" style="height: 30px;" />
                         <a id="site-title" href="">Sun Lab</a>
                     </div>
                     <div id="navbar-ul-container">
@@ -183,6 +183,7 @@
             <h2>What's New</h2>
 
             <p>
+                <strong>[Mar. 2023]</strong> Suiru Lu joined our lab, welcome，Suiru！<br />
                 <strong>[Mar. 2023]</strong> Shanghao Dai joined our lab, welcome，Shanghao！<br />
                 <strong>[Feb. 2023]</strong> Yongkang Tang joined our lab, welcome，Yongkang！<br />
                 <strong>[Feb. 2023]</strong> Lingyun Xu joined our lab, welcome，Lingyun！<br />
@@ -515,20 +516,20 @@
                         </div>
                     </div>
 
-  <!--                    <div class="col-md-4 col-sm-4 col-xs-12">
+                  <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Yongkang Tang (唐永康)" title="Yongkang Tang  (唐永康)" id="display-picture" src="static/img/yongkang2.jpg" />
+                                <img alt="Suiru Lu (鲁穗茹)" title="Suiru Lu (鲁穗茹)" id="display-picture" src="static/img/suiru.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Yongkang Tang (唐永康),research technician，Interested in RNA structome and system analysis
+                                <p>Suiru Lu (鲁穗茹),research technician，Interested in gRNA design of CRISPR-Cas13 system.
                                 </p>
                             </div>
                         </div>
                     </div>
                     
-                    <div class="col-md-4 col-sm-4 col-xs-12">
+      <!--                  <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
