--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                                 <img alt="Suiru Lu (鲁穗茹)" title="Suiru Lu (鲁穗茹)" id="display-picture" src="static/img/suiru.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Suiru Lu (鲁穗茹),research technician，Interested in gRNA design of CRISPR-Cas13 system.
+                                <p>Suiru Lu (鲁穗茹),undergraduate，Interested in gRNA design of CRISPR-Cas13 system.
                                 </p>
                             </div>
                         </div>
