--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Shanghao Dai (戴尚好)" title="Shanghao Dai (戴尚好)" id="display-picture" src="static/img/shanghao.png" />
+                                <img alt="Shanghao Dai (戴尚好)" title="Shanghao Dai (戴尚好)" id="display-picture" src="static/img/shanghao2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Shanghao Dai (戴尚好),undergraduate，Interested in artificial intelligence，especially RBP-RNA interaction prediction.
@@ -520,7 +520,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Suiru Lu (鲁穗茹)" title="Suiru Lu (鲁穗茹)" id="display-picture" src="static/img/suiru.jpg" />
+                                <img alt="Suiru Lu (鲁穗茹)" title="Suiru Lu (鲁穗茹)" id="display-picture" src="static/img/suiru2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Suiru Lu (鲁穗茹),undergraduate，Interested in gRNA design of CRISPR-Cas13 system.
