--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Chengqian Wang （王成前）" title="Chengqian Wang （王成前）" id="display-picture" src="static/img/chengqian.jpg" />
+                                <img alt="Chengqian Wang （王成前）" title="Chengqian Wang （王成前）" id="display-picture" src="static/img/chengqian2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Chengqian Wang (王成前)，Master, Interested in structural analysis and machine learning.
