--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                                 <img alt="Ruobin Zhao (赵若斌)" title="Ruobin Zhao (赵若斌)" id="display-picture" src="static/img/ruobin.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Ruobin Zhao (赵若斌),undergraduate，Interested in RNA structure method development and analysis.
+                                <p>Ruobin Zhao (赵若斌),Master，Interested in RNA structure method development and analysis.
                                 </p>
                             </div>
                         </div>
