--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <h2>What's New</h2>
 
             <p>
-                <strong>[Apr. 2023]</strong> Lei gave an invited virtual talk to the <a href="https://mp.weixin.qq.com/s/tX_2aNVmwmFmZrc8jWxLDg" target="_blank">Daxue Club</a>！about RNA structurome and AI improving drug development<br />
+                <strong>[Apr. 2023]</strong> Dr. Sun gave an invited virtual talk to the <a href="https://mp.weixin.qq.com/s/tX_2aNVmwmFmZrc8jWxLDg" target="_blank">Daxue Club</a> about RNA structurome and AI improving drug development.<br />
                 <strong>[Apr. 2023]</strong> Ruobin Zhao joined our lab, welcome，Ruobin！<br />
                 <strong>[Apr. 2023]</strong> Chengqian Wang joined our lab, welcome，Chengqian！<br />
                 <strong>[Mar. 2023]</strong> Suiru Lu joined our lab, welcome，Suiru！<br />
