--- a/index.html
+++ b/index.html
@@ -571,20 +571,20 @@
                         </div>
                     </div>
 
-    <!--                  <div class="col-md-4 col-sm-4 col-xs-12">
+                 <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Suiru Lu (鲁穗茹)" title="Suiru Lu (鲁穗茹)" id="display-picture" src="static/img/suiru2.jpg" />
+                                <img alt="Linxuan Li (李林璇)" title="Linxuan Li (李林璇)" id="display-picture" src="static/img/lilinxuan.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Suiru Lu (鲁穗茹),undergraduate，Interested in gRNA design of CRISPR-Cas13 system.
+                                <p>Linxuan Li (李林璇),undergraduate，Interested in gRNA design of CRISPR-Cas13 system.
                                 </p>
                             </div>
                         </div>
                     </div>
                     
-                  <div class="col-md-4 col-sm-4 col-xs-12">
+       <!--              <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
