--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Jiale He (何嘉乐)" title="Jiale He (何嘉乐)" id="display-picture" src="static/img/hejiale.jpg" />
+                                <img alt="Jiale He (何嘉乐)" title="Jiale He (何嘉乐)" id="display-picture" src="static/img/hejiale2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Jiale He (何嘉乐),undergraduate，Interested in Interested in artificial intelligence and RNA structure analysis.
@@ -591,7 +591,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Chen Yan (闫宸)" title="Chen Yan (闫宸)" id="display-picture" src="static/img/yanchen.jpg" />
+                                <img alt="Chen Yan (闫宸)" title="Chen Yan (闫宸)" id="display-picture" src="static/img/yanchen2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>WChen Yan (闫宸),interested in the prediction of RBP and deep learning
