--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                                 <img alt="Chen Yan (闫宸)" title="Chen Yan (闫宸)" id="display-picture" src="static/img/yanchen2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>WChen Yan (闫宸),interested in the prediction of RBP and deep learning
+                                <p>Chen Yan (闫宸),interested in the prediction of RBP and deep learning
                                 </p>
                             </div>
                         </div>
