--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <h2>What's New</h2>
 
             <p>
-                <strong>[May 2023]</strong> Our paper "PrismNet: predicting protein–RNA interaction using in vivo RNA structural information" was accepted at Nucleic Acids Research. This is my first paper in Shandong University. <br />
+                <strong>[May 2023]</strong> Our PrismNet web server paper "PrismNet: predicting protein–RNA interaction using in vivo RNA structural information" was accepted at Nucleic Acids Research. This is my first paper in Shandong University. <br />
                 <strong>[May 2023]</strong> Chen Yan joined our lab, welcome，Chen！<br />
                 <strong>[May 2023]</strong> Jiale He joined our lab, welcome，Jiale！<br />
                 <strong>[Apr. 2023]</strong> Dr. Sun gave an invited virtual talk to the <a href="https://mp.weixin.qq.com/s/tX_2aNVmwmFmZrc8jWxLDg" target="_blank">Daxue Club</a> about RNA structurome and AI improving drug development.<br />
