--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     10. Structural RNA components supervise the sequential DNA cleavage in R2 retrotransposon
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
-                    Pujuan Deng, Shun-Qing Tan, Qi-Yu Yang, Liangzheng Fu, Yachao Wu, Han-Zhou Zhu, Lei Sun</b>, Zhangbin Bao, Yi Lin, Qiangfeng Cliff Zhang, Haoyi Wang, Jia Wang, Jun-Jie Gogo Liu
+                    Pujuan Deng*, Shun-Qing Tan*, Qi-Yu Yang, Liangzheng Fu, Yachao Wu, Han-Zhou Zhu, <b>Lei Sun</b>, Zhangbin Bao, Yi Lin, Qiangfeng Cliff Zhang, Haoyi Wang, Jia Wang#, Jun-Jie Gogo Liu#
                 </div>
                 <!-- arxiv and website link -->
                 <div class="paper-links col-md-12 col-sm-12 col-xs-12">
