--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
             <hr />
 
     <h5>Alumni</h5>
-            1. Lingyun Xu（许凌云），now in Institute of Frontier and Interdisciplinary Science，Shandong University.
+            1. Lingyun Xu (许凌云), undergraduate, now in Institute of Frontier and Interdisciplinary Science，Shandong University.
     <hr />
     
  <!--    <h2>Download</h2>
