--- a/index.html
+++ b/index.html
@@ -518,10 +518,10 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Honhkun Liu (刘洪堃)" title="Honhkun Liu (刘洪堃)" id="display-picture" src="static/img/hongkun.jpg" />
+                                <img alt="Hongkun Liu (刘洪堃)" title="Hongkun Liu (刘洪堃)" id="display-picture" src="static/img/hongkun.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Honhkun Liu (刘洪堃),Postdoctoral researcher，Graduated from Murdoch University，Australia. Interested in prediction of viral epidemic risk.
+                                <p>Hongkun Liu (刘洪堃),Postdoctoral researcher，Graduated from Murdoch University，Australia. Interested in prediction of viral epidemic risk.
                                 </p>
                             </div>
                         </div>
