--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <h2>What's New</h2>
 
             <p>
-                <strong>[Jun. 2023]</strong> Dr Tong Zhou joined our lab, welcome，Tong！<br />
+                <strong>[Jun. 2023]</strong> Dr. Tong Zhou joined our lab, welcome，Tong！<br />
                 <strong>[Jun. 2023]</strong> Dr. Hongkun Liu joined our lab, welcome，Hongkun！<br />
                 <strong>[May 2023]</strong> Our PrismNet web server paper "PrismNet: predicting protein–RNA interaction using in vivo RNA structural information" was accepted at Nucleic Acids Research. This is my first paper in Shandong University. <br />
                 <strong>[May 2023]</strong> Chen Yan joined our lab, welcome，Chen！<br />
