--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                                 <img alt="Tong Zhou （周通)" title="Tong Zhou （周通)" id="display-picture" src="static/img/zhoutong2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Tong Zhou （周通),Postdoctoral researcher，Graduated from institute of oceanology, CAS, China. Interested in metagenome, single cell analysis and third generation sequencing.
+                                <p>Tong Zhou （周通),Postdoctoral researcher，Graduated from institute of oceanology, CAS, China. Interested in metagenome, single cell analysis and the third generation sequencing.
                                 </p>
                             </div>
                         </div>
