--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <a target="_blank" href="https://faculty.sdu.edu.cn/leisun/zh_CN/index.htm">Shandong University</a>
                             </li>
                             <li class="nav-listitem">
-                                <a target="_blank" href="https://www.lifesci.sdu.edu.cn/info/1064/7587.htm">School of Life Science</a>
+                                <a target="_blank" href="https://www.lifesci.sdu.edu.cn/info/1064/7587.htm">School of Life Sciences</a>
                             </li>
                             <li class="nav-listitem">
                                 <a target="_blank" href="https://scholar.google.com/citations?hl=zh-CN&user=qdB0PMYAAAAJ">Google Scholar</a>
