--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
             <h2>What's New</h2>
 
             <p>
+                <strong>[Jul. 2023]</strong> Junhao Wang joined our lab, welcome，Junhao！<br />
+                <strong>[Jul. 2023]</strong> Ziyou Luo joined our lab, welcome，Ziyou！<br />
                 <strong>[Jun. 2023]</strong> Dr. Tong Zhou joined our lab, welcome，Tong！<br />
                 <strong>[Jun. 2023]</strong> Dr. Hongkun Liu joined our lab, welcome，Hongkun！<br />
                 <strong>[May 2023]</strong> Our PrismNet web server paper "PrismNet: predicting protein–RNA interaction using in vivo RNA structural information" was accepted at Nucleic Acids Research. This is my first paper in Shandong University. <br />
