--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
             <hr />
 
     <h4>Alumni</h4>
-            1. Lingyun Xu (许凌云), undergraduate, now in Institute of Frontier and Interdisciplinary Science，Shandong University.
+            1. Lingyun Xu (许凌云), undergraduate, 2023.2-2023.6，Now in Institute of Frontier and Interdisciplinary Science，Shandong University.
     <hr />
     
  <!--    <h2>Download</h2>
