--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
             <h2>What's New</h2>
 
             <p>
+                <strong>[Aug. 2023]</strong> Jingwen Wang joined our lab, welcome，Jingwen！<br />
                 <strong>[Jul. 2023]</strong> Junhao Wang joined our lab, welcome，Junhao！<br />
                 <strong>[Jul. 2023]</strong> Ziyou Luo joined our lab, welcome，Ziyou！<br />
                 <strong>[Jun. 2023]</strong> Dr. Tong Zhou joined our lab, welcome，Tong！<br />
@@ -681,7 +682,7 @@
                                 <img alt="Jiale He (何嘉乐)" title="Jiale He (何嘉乐)" id="display-picture" src="static/img/hejiale2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Jiale He (何嘉乐),undergraduate，Interested in Interested in artificial intelligence and RNA structure analysis.
+                                <p>Jiale He (何嘉乐),undergraduate，Interested in artificial intelligence and RNA structure analysis.
                                 </p>
                             </div>
                         </div>
@@ -740,20 +741,20 @@
                         </div>
                     </div>
                     
- <!--                     <div class="col-md-4 col-sm-4 col-xs-12">
+                   <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Shanghao Dai (戴尚好)" title="Shanghao Dai (戴尚好)" id="display-picture" src="static/img/shanghao2.jpg" />
+                                <img alt="Jingwen Wang(王婧雯)" title="Jingwen Wang(王婧雯)" id="display-picture" src="static/img/jingwen.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Shanghao Dai (戴尚好),undergraduate，Interested in artificial intelligence，especially RBP-RNA interaction prediction.
+                                <p>Jingwen Wang(王婧雯),Master，Interested in precision medicine and RNA secondary structure.
                                 </p>
                             </div>
                         </div>
                     </div>
 
-                  <div class="col-md-4 col-sm-4 col-xs-12">
+     <!--                <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
