--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Jingwen Wang(王婧雯)" title="Jingwen Wang(王婧雯)" id="display-picture" src="static/img/jingwen.jpg" />
+                                <img alt="Jingwen Wang(王婧雯)" title="Jingwen Wang(王婧雯)" id="display-picture" src="static/img/jingwen2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Jingwen Wang(王婧雯),Master，Interested in precision medicine and RNA secondary structure.
