--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
             <h2>What's New</h2>
 
             <p>
+                <strong>[Sep. 2023]</strong> Yang Cheng joined our lab, welcome，Yang！<br />
                 <strong>[Aug. 2023]</strong> Jingwen Wang joined our lab, welcome，Jingwen！<br />
                 <strong>[Jul. 2023]</strong> Junhao Wang joined our lab, welcome，Junhao！<br />
                 <strong>[Jul. 2023]</strong> Ziyou Luo joined our lab, welcome，Ziyou！<br />
@@ -754,20 +755,20 @@
                         </div>
                     </div>
 
-     <!--                <div class="col-md-4 col-sm-4 col-xs-12">
+                  <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Suiru Lu (鲁穗茹)" title="Suiru Lu (鲁穗茹)" id="display-picture" src="static/img/suiru2.jpg" />
+                                <img alt="Yang Chen (程洋)" title="Yang Chen (程洋)" id="display-picture" src="static/img/chengyang.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Suiru Lu (鲁穗茹),undergraduate，Interested in gRNA design of CRISPR-Cas13 system.
+                                <p>Yang Chen (程洋),undergraduate，Interested in RNA editing and gRNA design.
                                 </p>
                             </div>
                         </div>
                     </div>
                     
- -->    
+   
                     
                 </div>
             </div>          
