--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Jindong Sun (孙近东)" title="Jindong Sun (孙近东)" id="display-picture" src="static/img/jindong.jpg" />
+                                <img alt="Jindong Sun (孙近东)" title="Jindong Sun (孙近东)" id="display-picture" src="static/img/jindong3.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Jindong Sun (孙近东),Postdoctoral researcher，Graduated from Shandong University of Science and Technology. Interested in AI model development，especially Deep learning-based multimodal medical image processing.
