--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
             <p>
 
-                <strong>[Sep. 2023]</strong> Dr. Jindong Sun joined our lab, welcome，Jindong Sun！<br />
+                <strong>[Sep. 2023]</strong> Dr. Jindong Sun joined our lab, welcome，Jindong！<br />
                 <strong>[Sep. 2023]</strong> Yuancheng Wang joined our lab, welcome，Yuancheng！<br />
                 <strong>[Sep. 2023]</strong> Yang Cheng joined our lab, welcome，Yang！<br />
                 <strong>[Aug. 2023]</strong> Jingwen Wang joined our lab, welcome，Jingwen！<br />
