--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
                                 <img alt="Yule Gu(谷雨乐)" title="Yule Gu(谷雨乐)" id="display-picture" src="static/img/yule.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>SYule Gu(谷雨乐),undergraduate，Interested in RNA structures in Archaea.
+                                <p>Yule Gu(谷雨乐),undergraduate，Interested in RNA structures in Archaea.
                                 </p>
                             </div>
                         </div>
