--- a/index.html
+++ b/index.html
@@ -956,7 +956,8 @@
             <hr />
 
     <h4>Alumni</h4>
-            1. Lingyun Xu (许凌云), undergraduate, 2023.2-2023.6，Now in Institute of Frontier and Interdisciplinary Science，Shandong University.
+            1. Lingyun Xu (许凌云), Class of 2022 undergraduate, 2023.2-2023.6，Change majors to Institute of Frontier and Interdisciplinary Science，Shandong University.
+        
     <hr />
     
  <!--    <h2>Download</h2>
