--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                                 <img alt="Shaozhen Yin(尹绍桢)" title="Shaozhen Yin(尹绍桢)" id="display-picture" src="static/img/shaozhen.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Shaozhen Yin(尹绍桢),technician，Interested in structural analysis.
+                                <p>Shaozhen Yin(尹绍桢),intern. Interested in structural analysis.
                                 </p>
                             </div>
                         </div>
