--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <a target="_blank" href="https://faculty.sdu.edu.cn/leisun/zh_CN/index.htm">Shandong University</a>
                             </li>
                             <li class="nav-listitem">
-                                <a target="_blank" href="https://www.lifesci.sdu.edu.cn/info/1064/7587.htm">School of Life Sciences</a>
+                                <a target="_blank" href="https://www.lifesci.sdu.edu.cn/info/1333/9352.htm">School of Life Sciences</a>
                             </li>
                             <li class="nav-listitem">
                                 <a target="_blank" href="https://scholar.google.com/citations?hl=zh-CN&user=qdB0PMYAAAAJ">Google Scholar</a>
@@ -183,6 +183,7 @@
             <h2>What's New</h2>
 
             <p>
+                <strong>[Jan. 2024]</strong> Our Review paper "RNA Structure: Implications in Viral Infections and Neurodegenerative Diseases" was accepted at Advanced Biotechnology. This is the first paper produced by Sunlab only. Congratulations to Suiru, Yongkang and Shaozhen!<br />
                 <strong>[Nov. 2023]</strong> Shaozhen Yin joined our lab as an intern, welcome，Shaozhen！<br /> 
                 <strong>[Oct. 2023]</strong> Yule Gu joined our lab for graduation design, welcome，Yule！<br />
                 <strong>[Oct. 2023]</strong> Long Qian joined our lab, welcome，Long！<br />
