--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 
                     </div>
                 <div class="paper-banner col-md-12 col-sm-12 col-xs-12">
-                    <img src="static/img/research/abt.png" alt="RNA structure: implications in viral infections and neurodegenerative diseases" title="RNA structure: implications in viral infections and neurodegenerative diseases" />
+                    <img src="static/img/research/abt2.png" alt="RNA structure: implications in viral infections and neurodegenerative diseases" title="RNA structure: implications in viral infections and neurodegenerative diseases" />
                 </div>
             </div>        
             <hr />   
