--- a/index.html
+++ b/index.html
@@ -963,8 +963,11 @@
             <hr />
 
     <h4>Alumni</h4>
-            1. Lingyun Xu (许凌云), Class of 2022 undergraduate, 2023.2-2023.6，Change majors to Institute of Frontier and Interdisciplinary Science，Shandong University.
-            2. Long Qian （钱龙）， Class of 2023 undergraduate, 2023.9-2023.12，Recommended to partner laboratory in  Research Center for Mathematics and Interdisciplinary Science, Shandong University.
+            1. Lingyun Xu (许凌云), Class of 2022 undergraduate, 2023.2-2023.6，Change majors to Institute of Frontier and Interdisciplinary Science，Shandong University.<br />
+            2. Long Qian （钱龙）， Class of 2023 undergraduate, 2023.9-2023.12，Recommended to partner laboratory in  Research Center for Mathematics and Interdisciplinary Science, Shandong University.<br />
+
+
+            
     <hr />
     
  <!--    <h2>Download</h2>
