--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
             <h2>What's New</h2>
 
             <p>
+                <strong>[Sep. 2023]</strong> Dr. Xiaoyu Zhou joined our lab, welcome，Xiaoyu！<br />
                 <strong>[Jan. 2024]</strong> Our Review paper "RNA Structure: Implications in Viral Infections and Neurodegenerative Diseases" was accepted at Advanced Biotechnology. This is the first paper produced by Sunlab only. Congratulations to Suiru, Yongkang and Shaozhen!<br />
                 <strong>[Nov. 2023]</strong> Shaozhen Yin joined our lab as an intern, welcome，Shaozhen！<br /> 
                 <strong>[Oct. 2023]</strong> Yule Gu joined our lab for graduation design, welcome，Yule！<br />
