--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <div class="col-md-12 col-sm-12 col-xs-12 col-12">
                     <div id="site-title-container">
                         <img alt="Sun Lab (孙磊)" title="Sun Lab (孙磊)" src="static/img/geometry.gif" style="height: 30px;" />
+                        <img alt="Sun Lab (孙磊)" title="Sun Lab (孙磊)" src="static/img/logo.jpg" style="height: 30px;" />
                         <a id="site-title" href="">Sun Lab</a>
                     </div>
                     <div id="navbar-ul-container">
