--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="col-md-12 col-sm-12 col-xs-12 col-12">
                     <div id="site-title-container">
                         <img alt="Sun Lab (孙磊)" title="Sun Lab (孙磊)" src="static/img/geometry.gif" style="height: 30px;" />
-                        <img alt="Sun Lab (孙磊)" title="Sun Lab (孙磊)" src="static/img/logo.jpg" style="height: 30px;" />
+                        <img alt="Sun Lab (孙磊)" title="Sun Lab (孙磊)" src="static/img/logo-bar.jpg" style="height: 30px;" />
                         <a id="site-title" href="">Sun Lab</a>
                     </div>
                     <div id="navbar-ul-container">
@@ -652,7 +652,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="The next you " title="The next you" id="display-picture" src="static/img/logo.jpg" />
+                                <img alt="The next you " title="The next you" id="display-picture" src="static/img/logo-bar.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Welcome to join us！（欢迎你的加入！）
