--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
             <h2>What's New</h2>
 
             <p>
+                <strong>[Mar. 2024]</strong> Yuning Liu joined our lab, welcome，Yuning！<br />
                 <strong>[Feb. 2024]</strong> Dr. Xiaoyu Zhou joined our lab, welcome，Xiaoyu！<br />
                 <strong>[Jan. 2024]</strong> Our Review paper "RNA Structure: Implications in Viral Infections and Neurodegenerative Diseases" was accepted at Advanced Biotechnology. This is the first paper produced by Sunlab only. Congratulations to Suiru, Yongkang and Shaozhen!<br />
                 <strong>[Nov. 2023]</strong> Shaozhen Yin joined our lab as an intern, welcome，Shaozhen！<br /> 
@@ -889,20 +890,20 @@
                         </div>
                     </div>                
  
-       <!--               
+                  
               <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Long Qian (钱龙)" title="Long Qian (钱龙)" id="display-picture" src="static/img/long.jpg" />
+                                <img alt="Yuning Liu (刘昱宁)" title="Yuning Liu (刘昱宁)" id="display-picture" src="static/img/yuning.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Long Qian (钱龙),interested in machine learning，especially AI models.
+                                <p>Yuning Liu (刘昱宁),interested in analyzing the high-throughput data.
                                 </p>
                             </div>
                         </div>
                     </div>  
--->
+
 
                     
                 </div>
