--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
             <h2>What's New</h2>
 
             <p>
+                <strong>[Mar. 2024]</strong> Xinen Zheng joined our lab, welcome，Xin en！<br />
+                <strong>[Mar. 2024]</strong> Sen Zhang joined our lab, welcome，Sen！<br />
                 <strong>[Mar. 2024]</strong> Yuning Liu joined our lab, welcome，Yuning！<br />
                 <strong>[Feb. 2024]</strong> Dr. Xiaoyu Zhou joined our lab, welcome，Xiaoyu！<br />
                 <strong>[Jan. 2024]</strong> Our Review paper "RNA Structure: Implications in Viral Infections and Neurodegenerative Diseases" was accepted at Advanced Biotechnology. This is the first paper produced by Sunlab only. Congratulations to Suiru, Yongkang and Shaozhen!<br />
@@ -929,15 +931,15 @@
                             </div>
                         </div>
                  </div>
-   <!--                         
+                         
                   <div class="col-md-4 col-sm-4 col-xs-12">
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Yuancheng wang (王远铖)" title="Yuancheng wang (王远铖)" id="display-picture" src="static/img/yuancheng.jpg" />
+                                <img alt="Sen Zhang (张森)" title="Sen Zhang (张森)" id="display-picture" src="static/img/senzhang.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Yuancheng wang (王远铖),interested in analyzing the high-throughput data .
+                                <p>Sen Zhang (张森),interested in AI especially application in RBP-RNA interaction.
                                 </p>
                             </div>
                         </div>
@@ -948,15 +950,18 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Ziyou Luo (罗子游)" title="Ziyou Luo (罗子游)" id="display-picture" src="static/img/ziyou.jpg" />
+                                <img alt="Xinen Zheng (郑新恩)" title="Xinen Zheng (郑新恩)" id="display-picture" src="static/img/xinen.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
-                                <p>Ziyou Luo (罗子游),interested in the bioinformatics analysis expecially ATAC-seq.
+                                <p>Xinen Zheng (郑新恩),interested in AI especially application in RNA splicing.
                                 </p>
                             </div>
                         </div>
                     </div>  
--->
+
+
+
+
 
                     
                 </div>
