--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             <h2>What's New</h2>
 
             <p>
-                <strong>[Mar. 2024]</strong> Xinen Zheng joined our lab, welcome，Xin en！<br />
-                <strong>[Mar. 2024]</strong> Sen Zhang joined our lab, welcome，Sen！<br />
+                <strong>[May 2024]</strong> Xinen Zheng joined our lab, welcome，Xin en！<br />
+                <strong>[May 2024]</strong> Sen Zhang joined our lab, welcome，Sen！<br />
                 <strong>[Mar. 2024]</strong> Yuning Liu joined our lab, welcome，Yuning！<br />
                 <strong>[Feb. 2024]</strong> Dr. Xiaoyu Zhou joined our lab, welcome，Xiaoyu！<br />
                 <strong>[Jan. 2024]</strong> Our Review paper "RNA Structure: Implications in Viral Infections and Neurodegenerative Diseases" was accepted at Advanced Biotechnology. This is the first paper produced by Sunlab only. Congratulations to Suiru, Yongkang and Shaozhen!<br />
