--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
             1. Lingyun Xu (许凌云), Class of 2022 undergraduate, 2023.2-2023.6，Change majors to Institute of Frontier and Interdisciplinary Science，Shandong University.<br />
             2. Long Qian （钱龙）， Class of 2023 undergraduate, 2023.9-2023.12，Recommended to partner laboratory in  Research Center for Mathematics and Interdisciplinary Science, Shandong University.<br />
             3. Shanghao Dai（戴尚好）， Class of 2020 undergraduate, 2023.3-2024.5，Ph.D. at University of Science and Technology of China.<br />
-            4. Yule Gu（谷雨乐）， Class of 2020 undergraduate, 2023.9-2024.5，Ph.D. in Institute of Genetics and Developmental Biology, CAS <br />
+            4. Yule Gu（谷雨乐）， Class of 2020 undergraduate, 2023.9-2024.5，Ph.D. in Institute of Genetics and Developmental Biology, CAS. <br />
 
 
             
