--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                         <p></p>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0">
-                                <img alt="Yilin Song(宋奕霖)" title="Yilin Song(宋奕霖)" id="display-picture" src="static/img/yilin.jpg" />
+                                <img alt="Yilin Song(宋奕霖)" title="Yilin Song(宋奕霖)" id="display-picture" src="static/img/yilin2.jpg" />
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; text-align: center">
                                 <p>Yilin Song(宋奕霖),Master，Interested in RNA structure determination.
