--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                     <div id="navbar-ul-container">
                         <ul id="navbar-ul">
                             <li class="nav-listitem">
+                                <a target="_blank" href="https://sunlab.qd.sdu.edu.cn/">HomePage</a>
+                            </li>
+                            <li class="nav-listitem">
                                 <a target="_blank" href="https://faculty.sdu.edu.cn/leisun/zh_CN/index.htm">Shandong University</a>
                             </li>
                             <li class="nav-listitem">
