--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         gtag('config', 'UA-169796989-1');
     </script>
     -->
+    <!--xukui访问统计
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -28,6 +29,7 @@
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
+       -->
 
     <meta name="keywords" content="孙磊，Lei, Lei Sun, Sun Lab, rnalab.cn, tsinghua, 山东大学，SARS-CoV-2, icSHAPE, RNA structure, Shandong University, prismnet, structural dynamic, RNA sequencing, 孙磊, 清华大学, 生命学院, 生命科学学院，山东大学，齐鲁青年学者">
     <meta itemprop="description" name="description" content="Lei Sun, rnalab.cn, profile, Researcher at Shandong University." />
