--- a/index.html
+++ b/index.html
@@ -264,6 +264,27 @@
             (* co-First authors; # co-Corresponding authors)
             </div>
 
+
+ <div class="paper-container row">
+                <div class="paper-title col-md-12 col-sm-12 col-xs-12">
+                    13. SF3A3 Drives Tumorigenesis in Endometrial Cancer by Enhancing c-FOS Expression and Represents a Potential Therapeutic Target
+                </div>
+                <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
+                    Wei Yu, Yi Gu, Hengrui Zhang, Wunan Huang, Lei Sun, Liangjian Ma, Xiaolei Liang, Lexin Liu, Guiping Chen, Weihua Wang, Zhongkai Cao, Xue Li, Xiangjun Chen#, Lidan Hu#
+                <!-- arxiv and website link   -->  
+                <div class="paper-links col-md-12 col-sm-12 col-xs-12">
+                    <span class="paper-link">
+                    <b>Advanced Science (Weinh), 2025</b>
+                    </span>
+                    <a class="paper-link button-div" href="https://pubmed.ncbi.nlm.nih.gov/40598817/" target="_blank">
+                    Advanced Science (Weinh)
+                    </a>
+                    
+       </div>
+            </div>      
+            <hr />  
+
+            
   <div class="paper-container row">
                 <div class="paper-title col-md-12 col-sm-12 col-xs-12">
                     12. Evaluation of novel computational methods to identify RNA-binding protein footprints from structural data
