--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     13. SF3A3 Drives Tumorigenesis in Endometrial Cancer by Enhancing c-FOS Expression and Represents a Potential Therapeutic Target
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
-                    Wei Yu, Yi Gu, Hengrui Zhang, Wunan Huang, <b>Lei Sun</b>b>, Liangjian Ma, Xiaolei Liang, Lexin Liu, Guiping Chen, Weihua Wang, Zhongkai Cao, Xue Li, Xiangjun Chen#, Lidan Hu#
+                    Wei Yu, Yi Gu, Hengrui Zhang, Wunan Huang, <b>Lei Sun</b>, Liangjian Ma, Xiaolei Liang, Lexin Liu, Guiping Chen, Weihua Wang, Zhongkai Cao, Xue Li, Xiangjun Chen#, Lidan Hu#
                 <!-- arxiv and website link   -->  
                 <div class="paper-links col-md-12 col-sm-12 col-xs-12">
                     <span class="paper-link">
@@ -290,7 +290,7 @@
                     12. Evaluation of novel computational methods to identify RNA-binding protein footprints from structural data
                 </div>
                 <div class="paper-authors col-md-12 col-sm-12 col-xs-12">
-                    Orel Mizrahi*, Meredith Corley*, Ori Feldman*, Thorben Fröhlking*, <b>Lei Sun*</b>b>, Alison Ziesel*, Maciej Antczak, Mattia Bernetti, Shaimae I Elhajjajy, Wenze Huang, Grady G Nguyen, Samuel S Park, Raul I Perez Martell 11, Luke Trinity, Kui Xu, Tomasz Zok, Giovanni Bussi, Hosna Jabbari, Yaron Orenstein, Sharon Aviran#, Michelle M Meyer#, Gene Yeo#
+                    Orel Mizrahi*, Meredith Corley*, Ori Feldman*, Thorben Fröhlking*, <b>Lei Sun*</b>, Alison Ziesel*, Maciej Antczak, Mattia Bernetti, Shaimae I Elhajjajy, Wenze Huang, Grady G Nguyen, Samuel S Park, Raul I Perez Martell 11, Luke Trinity, Kui Xu, Tomasz Zok, Giovanni Bussi, Hosna Jabbari, Yaron Orenstein, Sharon Aviran#, Michelle M Meyer#, Gene Yeo#
                 </div>
                 <!-- arxiv and website link   -->  
                 <div class="paper-links col-md-12 col-sm-12 col-xs-12">
