--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <span class="paper-link">
                     <b>Advanced Science (Weinh), 2025</b>
                     </span>
-                    <a class="paper-link button-div" href="https://pubmed.ncbi.nlm.nih.gov/40598817/" target="_blank">
+                    <a class="paper-link button-div" href="https://advanced.onlinelibrary.wiley.com/doi/10.1002/advs.202504184" target="_blank">
                     Advanced Science (Weinh)
                     </a>
                     
